--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   </style>
 </head>
 <body>
-  <img src="yourimage.jpg" alt="Image" />
+  <img src="roman_army.jpg" alt="Image" />
 </body>
 </html>
